# RenderMolecules

./: .buildinfo  .gitignore  ElementData.py  H2O_elf.ply  README.md  RenderMolecules.html  RenderMolecules.py  background.html  community_guidelines.html  examples.html  genindex.html  index.html  install.sh  install_linux.sh  install_macos.sh  installation.html  modules.html  objects.inv  otherUtils.py  py-modindex.html  pyproject.toml  renderCUBEfiles.blend  renderCUBEfiles.blend1  search.html  searchindex.js  setup.html  setup.py  sphinx-reading-durations.json  testCUBE.cube  uninstall.sh  user_interface.html  utils.py
.github/workflows/: build_wheels.yml  sphinx.yml
_modules/: index.html
_modules/RenderMolecules/: ElementData.html  atom.html  blenderUtils.html  bond.html  geometry.html  otherUtils.html  structure.html  trajectory.html
_modules/render_molecules/: atom.html  blender_utils.html  bond.html  element_data.html  geometry.html  other_utils.html  structure.html  trajectory.html
_sources/: RenderMolecules.rst.txt  background.rst.txt  community_guidelines.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  user_interface.rst.txt
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  installation.rst  modules.rst  user_interface.rst
docs/source/_templates/: breadcrumbs.html
examples/: extract_scripts_from_examples.sh
examples/animation/: CH3OH.blend  CH3OH_OPT_trj.xyz  convert_to_white_background_mp4.sh  script.py
examples/isosurface/: CH3OH.blend  README.md  script.py
examples/orbit_camera/: CH3OH.blend  CH3OH_OPT.xyz  convert_to_white_background_mp4.sh  script.py
examples/vibrations/: CH3OH.blend  CH3OH.out  convert_to_white_background_mp4.sh  script.py
render_molecules/: atom.py  blender_utils.py  bond.py  constants.py  element_data.py  geometry.py  other_utils.py  structure.py  trajectory.py
src/RenderMolecules/: ElementData.py  RenderMolecules.py  atom.py  blenderUtils.py  bond.py  constants.py  geometry.py  structure.py  trajectory.py
