[build-system]
requires = ["setuptools >=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "render_molecules"
dynamic = ["version"]
authors = [
    { name = "Tobias Dijkhuis", email = "t.m.dijkhuis@lic.leidenuniv.nl"},
]
description = "A way to render molecules in Blender"
readme = "README.md"
dependencies = ["numpy==1.24", "scikit-image"]
requires-python = ">=3.8, <3.12"
keywords = ["molecules", "chemistry", "blender", "rendering", "quantum"]

[project.urls]
Repository = "https://github.com/TobiasDijkhuis/RenderMolecules"
Documentation = "https://tobiasdijkhuis.github.io/RenderMolecules"
Issues = "https://github.com/TobiasDijkhuis/RenderMolecules/issues"

[tool.setuptools]
package-dir = {"" = "render_molecules"}

[tool.ruff]
builtins=['bmesh', 'bpy']

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "B9",
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
    "N",
]

ignore = [
    # only relevant if you run a script with `python -0`,
    # which seems unlikely for any of the scripts in this repo
    "B011",
    # Leave it to the formatter to split long lines and
    # the judgement of all of us.
    "E501",
    # Ternary statements are fine, but not too much.
    "SIM108",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
